--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -129,14 +129,14 @@
                   <br>
                   <center><img src="assets/images/remote_sensing_04.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                   <br>
-              <h4>2. The General Trend of Greening in the Navy Yard</h4>
-              <p>To answer the question of what is the general trend of greening in the Navy Yard, I used density plots to visualize the distribution of NDVI changing over time. The workflow is shown in the diagram as follows. The density plot is a variation of a histogram that uses kernel smoothing to plot values, allowing for smoother distribution by smoothing out the noise. To minimize the noise effect on visualizing the general trend, I also standardized the dataset to get rid of the noise. If the greenness in the Navy Yard doesn’t change over time, the distribution before and after standardization should look the same.
+              <h4>4. Management Implications for Urban Climate at the Local Scale in Baltimore City</h4>
+              <p>Urbanization drives significant environmental changes, impacting land surfaces, biodiversity, and urban life quality. In Baltimore, the Urban Heat Island (UHI) effect is closely linked to impervious surfaces (R²=0.41) and vegetation (NDVI, R²=0.44). A 10% increase in impervious surfaces corresponds to a 0.45°C rise in UHI intensity, underscoring the need for effective land-use management. Vegetation plays a critical role in UHI mitigation, with higher NDVI values reducing heat intensity, though areas with NDVI below 0.3 see weaker effects, highlighting the need for greening less vegetated neighborhoods. Forest coverage is most effective in reducing UHI when increased from 0% to 30%, with benefits tapering off beyond 40%. These findings emphasize the importance of strategic tree planting and vegetation enhancement in densely built urban areas to combat UHI and promote climate resilience.
                 <br>
                 <br>
                 <center><img src="assets/images/remote_sensing_05.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
                 <br>
-                By comparing the density plots before and after standardization, we can clearly observe the difference across the years. Therefore, we can conclude that the NDVI did change across the years from 1999 to 2018. </h4>
+                Socioeconomic variables exhibit complex relationships with UHI intensity. Population density correlates positively with UHI, especially in areas with densities between 0 and 5,000 persons/km², but this effect diminishes in neighborhoods exceeding 10,000 persons/km², likely due to cooling from nearby suburban areas. Median household income shows a negative correlation with UHI, particularly in neighborhoods with incomes below $100,000. Higher-income areas often have lower impervious surface coverage (average 12%) and more forest cover (average 28%), reducing UHI intensity. Rentership rates are positively correlated with UHI, as neighborhoods with high renter populations, typically in downtown Baltimore, tend to have limited green infrastructure. </h4>
                 <br>
                 <br>
                 <center>
@@ -149,14 +149,13 @@
                 <center><img src="assets/images/remote_sensing_08.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
                 <br>
-                <h4>3. The landscape Projects Change Overtime </h4>
+                <h4>5. Conclusion </h4>
                 <br>
                 <br>
-                We have seen the NDVI in the Navy Yard increasing over time, but how does each individual landscape project change over time? I used the same NDVI dataset calculated from Google Earth Engine. I then created a point cloud shapefile to extract the values of each location from 1999 to 2018 to visualize the change of NDVI over time by line graphs and density plots. By comparing the satellite imagery and the NDVI line graph, we can clearly see the NDVI change corresponding to the certain landscape construction events at each landscape project scale.
+                This study analyzed the spatial variation of Land Surface Temperature (LST) and Urban Heat Island (UHI) intensity in the Baltimore metropolitan area, revealing that high LST areas are concentrated in downtown regions with extensive impervious surfaces and minimal vegetation. Impervious surfaces and NDVI were identified as the most influential factors shaping UHI intensity, while socioeconomic variables, such as population density, had indirect effects through their association with impervious surfaces. High-income, low-density areas with more vegetation exhibited reduced UHI intensity.
                 <br>
-                <br>
-                1) The Central Green</br>
-                The site of Central Green used to be houses in 1999, but the houses were removed after 2002. The site remained as a green area covered with vegetation until 2010, when central green started construction. In 2015 the park as was finally completed and officially opened to the public.<br/>
+                <br>                
+                Using a path analysis model, this research provided a comprehensive framework for exploring the impacts of landscape and socioeconomic variables. Key contributions include the integration of multiple drivers, examination of social-ecological-climate interactions, and insights for urban planning. Future research should investigate a broader time period and seasonal UHI variations to better understand the physical and socioeconomic drivers of UHI, supporting the development of sustainable urban environments.<br/>
                 <br>
                 <center><img src="assets/images/remote_sensing_09.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
