--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -148,7 +148,9 @@
                 <br>
                 <center><img src="assets/images/remote_sensing_08.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
+		 These findings indicate that UHI intensity in Baltimore is influenced by multiple variables, including landscape patterns, vegetation cover, and socioeconomic factors, which interact in complex ways. To effectively mitigate UHI effects, urban planning must account for these direct and indirect interactions. Strategies should include reducing impervious surfaces, expanding tree canopies, and implementing equitable greening initiatives, particularly in socioeconomically disadvantaged neighborhoods. By integrating landscape and socioeconomic considerations, Baltimore can foster a more sustainable and livable urban environment while addressing climate inequities at the local scale.   
                 <br>
+		<br>
                 <h4>5. Conclusion </h4>
                 <br>
                 <br>
@@ -164,67 +166,8 @@
                 <br>
                 <center><img src="assets/images/remote_sensing_10.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
-                <br>
-                2) The League Island Park</br>
-                The league island park was designed by wells appel and Philadelphia Water department. It has an area of 2.5 acres and performs an important role in storm water collection for the Navy Yard. From the timeline of the League island park, we can see it also experienced great changes in the past 2 years. The site used to be covered with sparse vegetation. Then temporary buildings were constructed but was also soon removed. The League Island park started construction in 2012, completed in the next year and was opened to public in 2014.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_11.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                <br>
-                Similarly, we can also see a trend like central green in League Island Park’s NDVI line graph. In 2012, when construction of the park started, the NDVI began to drop, but the construction period of the the League Island park was much shorter, so the NDVI started to increase soon after the park was officially opened to the public.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_12.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                <br>
-                3) The Crescent Park</br>
-                The crescent park is another park designed by Wells Appel with an area of 3.46 acre. It was one of the first parks completed in the Navy yard designed as green infrastructure and to improve the environmental quality of the business area. From the historical images of the crescent park, we can see that it also experienced the removal of site buildings, a process of returning the site to public as green open space and finally become a park with green infrastructure.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_13.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                The crescent park NDVI is different from all the other parks, it almost did not experience any decreasing of the value but keeps increasing throughout the time. This might because most of the park is designed to be sunny lawn with less shrub and trees, which is similar to the condition before the park was built. So the NDVI did not decrease during the process.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_14.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                <br>
-                4) The Marine Parade Ground</br>
-                The last park, the marine parade ground is an historic site. The site saw the growth of the us navy and has remained an open space ever since the Navy Yard was constructed. From the timeline of historic images of the marine parade ground. We can see that the context of the park changed a lot during the time, but the park itself remained the same throughout the time. The park was intentionally left there without design because of its special historical meanings. From 2010 to 2014, some of the trees on the site were removed probably because they died or new renovation was made.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_15.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                From the NDVI line plots, we see the NDVI is generally increasing except the period between 2010 2014. That was the time when the trees on the site was removed. In the rest of the time the NDVI is increasing. Therefore, we can conclude that the greenness trend of marine parade ground is getting greener and greener.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_16.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                <br>
-                <h4>4. Validating the Results </h4>
-                <br>
-                <br>
-                To get a better sense of how the NDVI value represents the site greenness condition, I also went to the site to valid the result. I compared the different NDVI values at various locations with what is really on the site. Through the comparison we can see that the NDVI is a good reflection of the vegetation condition at each location.</br>
-                <br>
-                For example, the areas with lawns and shrubs has a value of 0.32</br>
-                <br>
-                <center><img src="assets/images/remote_sensing_17.jpg" style="max-width:50%;" alt="Three different data sources"></center>
-                <br>
-                And a grassland without too much human intervention can be as high as 0.62. Therefore, what we see from the site indicates that NDVI is just an indicator of vegetation quantity and health, but not the greenness quality.<br>
-                <br>
-                <center><img src="assets/images/remote_sensing_18.jpg" style="max-width:50%;" alt="Three different data sources"></center>
-                <br>
-                <br>
-                To help people get a better understanding how NDVI performs at each location in the Navy Yard, I developed a very simple web application to compare the value of each location with satellite images. You can check it out here. This simple web app realized the function of syncing the satellite imagery and the NDVI map with the mouse movement, so that people can get a clear understanding of what is exactly at the low NDVI locations.<br>
-                <br>
-                <center><img src="assets/images/remote_sensing_19.jpg" style="max-width:50%;" alt="Three different data sources"></center>
-                <br>
-                <h4>5. Conclusions</h4>
-                <br>
-                <br>
-                This study is a proof of concept to examine if NDVI is the best measurement of landscape change overtime. We can clearly see the parks and the Navy Yard getting greener, however, the higher NDVI values do not indicate the landscape quality is getting higher. At the human perception level, NDVI might not be the best.
-                <br>
-                <br>
-                I also understand there are limitations of this study. For example, the resolution of the satellite imagery and the noise in the satellite images themselves. We are also omitting some NDVI values by just looking at the mean value.
-                <br>
-                <br>
-                There are still lots of potential to improve this project. There is also one question I would leave here for you if you are interested in observing the landscape change in the urban environment. If NDVI is not the best in representing the greenness at the project level, which will be the best?
-                <br>
+                <br>    
+                
               </p>
             <div class="btn-load-more">
   						<a class="load-more" href="https://drive.google.com/file/d/1WlxBhoHLMOijnZm7mmdn30-50u4jwBeo/view?usp=sharing">Report</a>
