--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -132,21 +132,17 @@
               <p>Urbanization drives significant environmental changes, impacting land surfaces, biodiversity, and urban life quality. In Baltimore, the Urban Heat Island (UHI) effect is closely linked to impervious surfaces (R²=0.41) and vegetation (NDVI, R²=0.44). A 10% increase in impervious surfaces corresponds to a 0.45°C rise in UHI intensity, underscoring the need for effective land-use management. Vegetation plays a critical role in UHI mitigation, with higher NDVI values reducing heat intensity, though areas with NDVI below 0.3 see weaker effects, highlighting the need for greening less vegetated neighborhoods. Forest coverage is most effective in reducing UHI when increased from 0% to 30%, with benefits tapering off beyond 40%. These findings emphasize the importance of strategic tree planting and vegetation enhancement in densely built urban areas to combat UHI and promote climate resilience.
                 <br>
                 <br>
-                <center><img src="assets/images/remote_sensing_05.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                <br>
+                <center><img src="assets/images/LUPlot.jpg" style="max-width:80%;" alt="Three different data sources"></center>
+                <br>                
                 Socioeconomic variables exhibit complex relationships with UHI intensity. Population density correlates positively with UHI, especially in areas with densities between 0 and 5,000 persons/km², but this effect diminishes in neighborhoods exceeding 10,000 persons/km², likely due to cooling from nearby suburban areas. Median household income shows a negative correlation with UHI, particularly in neighborhoods with incomes below $100,000. Higher-income areas often have lower impervious surface coverage (average 12%) and more forest cover (average 28%), reducing UHI intensity. Rentership rates are positively correlated with UHI, as neighborhoods with high renter populations, typically in downtown Baltimore, tend to have limited green infrastructure. </h4>
+                <br>
+		<center><img src="assets/images/SocilaPlot.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
                 <br>
                 <center>
-                <img src="assets/images/remote_sensing_06.jpg" style="max-width:45%;" alt="Three different data sources">
-                <img src="assets/images/remote_sensing_07.jpg" style="max-width:45%;" alt="Three different data sources"></center>
+                <img src="assets/images/remote_sensing_06.jpg" style="max-width:45%;" alt="Three different data sources">                
                 <br>
-                <br>
-                I also plotted the mean value of each year in this line graph. Then used a loess function to fit each years’mean values. We can see the greenness of navy yard experienced continuous increasing from 1999 to 2005. And then experienced small changes but mostly consistent for the rest of the year. Generally, the NDVI trend is keeping increasing. That is to say, the Navy Yard is getting greener and greener from 1999 to 2018.<br/ >
-                <br>
-                <center><img src="assets/images/remote_sensing_08.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
+                <br>                
 		 These findings indicate that UHI intensity in Baltimore is influenced by multiple variables, including landscape patterns, vegetation cover, and socioeconomic factors, which interact in complex ways. To effectively mitigate UHI effects, urban planning must account for these direct and indirect interactions. Strategies should include reducing impervious surfaces, expanding tree canopies, and implementing equitable greening initiatives, particularly in socioeconomically disadvantaged neighborhoods. By integrating landscape and socioeconomic considerations, Baltimore can foster a more sustainable and livable urban environment while addressing climate inequities at the local scale.   
                 <br>
 		<br>
@@ -155,14 +151,7 @@
                 <br>
                 This study analyzed the spatial variation of Land Surface Temperature (LST) and Urban Heat Island (UHI) intensity in the Baltimore metropolitan area, revealing that high LST areas are concentrated in downtown regions with extensive impervious surfaces and minimal vegetation. Impervious surfaces and NDVI were identified as the most influential factors shaping UHI intensity, while socioeconomic variables, such as population density, had indirect effects through their association with impervious surfaces. High-income, low-density areas with more vegetation exhibited reduced UHI intensity.
                 <br>
-                <br>                
-                Using a path analysis model, this research provided a comprehensive framework for exploring the impacts of landscape and socioeconomic variables. Key contributions include the integration of multiple drivers, examination of social-ecological-climate interactions, and insights for urban planning. Future research should investigate a broader time period and seasonal UHI variations to better understand the physical and socioeconomic drivers of UHI, supporting the development of sustainable urban environments.<br/>
-                <br>
-                <center><img src="assets/images/remote_sensing_09.jpg" style="max-width:80%;" alt="Three different data sources"></center>
-                <br>
-                From the line graph on the Central Green NDVI change, we can clearly read the site history from the mean NDVI of each year. The NDVI increased after the buildings on the site was removed until the construction of the central green started. Then NDVI begins to drop until the construction was finished. After completion, the NDVI came back to increasing again. Which is exactly the same with our estimation of how parks usually changes the greenness of a site.
-                <br>
-                <br>
+                <br>              
                 <center><img src="assets/images/remote_sensing_10.jpg" style="max-width:80%;" alt="Three different data sources"></center>
                 <br>
                 <br>    
