--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <div class="first-content">
-      <div class="pic blog1-picture" style="background: url(assets/images/remote_sensing_00.jpg);">
+      <div class="pic blog1-picture" style="background: url(assets/images/LSTNDVI.jpg);">
         <div class="overlay"></div>
         <div class="content">
           <h3>Impacts of Land Use and Socioeconomic Patterns <br/>
