--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/NA.jpg" alt="">
+						<img src="assets/images/EJ_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="Envirnmental Justice Study"> Envirnmental Justice Study
