--- a/index.html
+++ b/index.html
@@ -66,11 +66,16 @@
 						<h3> Research Interest </h3>
 						<div class="line"></div>
 						<h4>Climate Change & Resilience;</h4>
-						<h4>Urban Environment Modeling;</h4>
+						<h4>Urban Environmental Modeling;</h4>
 						<h4>Climate and Health;</h4>
 						<h4>Social Jutice;</h4>
 						<br>
 						<br>
+						<h4>Remote Sensing; Geospatila Anlytics</h4>
+						<h4>GIScience; Mahchine Learning</h4>
+						<h4>WRF-UCM; Predictive Modeling </h4>
+						<br>
+						<br>						
 						<h3> Background </h3>
 						<div class="line"></div>
 						<p>As a research professional with experience at the Environmental Modeling Lab at UPenn and in the private sector, I specialize in integrating spatial data, machine learning, and GIS to analyze human, urban, and natural systems under extreme climate events.</p>
