--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						<img src="assets/images/EJ_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="Envirnmental Justice Study"> Envirnmental Justice Study
+								<h3><a href="EnviroJustice.html"> Envirnmental Justice Study
 									<br>
 									</a></h3> 
 								<h5><a href="EnviroJustice.html">An Inclusive Approach to Equitable Resource Distribution and Community Impact within LTER Boundary</a></h5>
