--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@ SCHOOL</a></h5>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/MOMA.jpg" alt="">
+						<img src="assets/images/urbandesign_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="MOMA.html">The Seclusion Garden <br>in MOMA</a></h3>
-								<h5><a href="MOMA.html">Creating a Landscape for Seclusion in the City of New York</a></h5>
+								<h3><a href="MOMA.html">The CAP</a></h3>
+								<h5><a href="MOMA.html">A Connecive Pathway for Bridging and Capping the communities together</a></h5>
 							</div>
 						</div>
 					</div>
