--- a/MOMA.html
+++ b/MOMA.html
@@ -12,7 +12,7 @@
       </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Xiao WU</title>
+        <title>Leila Bahrami</title>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -73,18 +73,23 @@
                     <div class="col-md-5">
                         <h3>The Seclusion Garden in MOMA</h3>
                         <h4>Creating a Space for Seclusion in the City of New York</h4>
-                        <p>One of the marks of maturity is the need for solitude: a city should not merely draw men together in many varied activities, but should permit each person to find, near at hand, moments of seclusion and peace, as Lewis Mumford once said, there should be a seclusion space in the city. MOMA, situated in the center of New York, surrounded by skyscrapers is a perfect space to experience the ideal seclusion as described in the classical Chinese literature.
+                        <p>The concept of Tri-boro line was introduced by RPA as the infrastructure investment that directly links the the east borough with the Manhattan-centric subway system. Based on the study of the Tri-boro line, the studio elaborates the dirct impacts of this potential on the neighborhood adjacant to the propsed station stops.
                           <br>
                           <br>
-                          In this seclusion garden, a forest of bamboo will be the keynote for the mysterious space for people to explore through. And among these spaces, moments of spaces will be placed for accommodating sculptures and activities. When tourists start to wander around in the seclusion garden, they would choose either to enter these special spaces or to continue with their trip to explore. Finally, they would reach a central open space, as a reward of going through these long ways of exploration. Experiences might vary from people to people, by referring and representing the classical Chinese garden philosophy in a modern language, this garden is going to provide the tourists with their own unique exploration of seclusion in a modern American city.
-                        </p>
+                        <p> The selected site is in Queens, New York City. It Lies next to St. Michael Cemetery and close to La Guardia Airport and M, R Train Northern Blvd Station. Because of its location within the regional context, our site has great potential to be developed in the future which provide new housing, new working space, new business, and new connections through Tri-Boro line and subway. 
+                          <br>
+                          <br>
+                        <p> This is a sustainable urban design project that emphasize on greater mobulity, better access to jobs, and opportunities for transit oriented development.
+                            It reconnects the isolated districts and establishes a continues network of public realm and amenities and change it into a destination for both New York city and surrounding neighborhood.
+                          <br>
+                          <br>                          
                         <div class="details">
                             <h6> Instructor </h6>
-                            <span>Professor Richard Weller</span>
+                            <span>Professor Nicholas Pevzner</span>
                             <h6> Categories </h6>
-                            <span>Individual Landscape Design Project</span>
+                            <span>Urban Design Project</span>
                             <h6> Date </h6>
-                            <span>09/2017 – 12/2017</span>
+                            <span>01/2019 – 05/2019</span>
                         </div>
                     </div>
                 </div>
@@ -92,7 +97,7 @@
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Xiao WU</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
